--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -1,6 +1,6 @@
 ansicolors==1.0.2
 beautifulsoup4>=4.3.2,<4.4
-coverage>=3.7,<3.8
+coverage>=3.7.1,<3.8
 docutils>=0.12,<0.13
 fasteners==0.14.1
 futures==3.0.5
@@ -15,7 +15,7 @@ psutil==3.1.1
 pyflakes==1.1.0
 Pygments==1.4
 pystache==0.5.3
-pytest-cov>=1.8,<1.9
+pytest-cov==2.2.1
 pytest>=2.6,<2.7
 pywatchman==1.3.0
 requests>=2.5.0,<2.6
