--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -16,6 +16,7 @@ pyflakes==1.1.0
 Pygments==1.4
 pystache==0.5.3
 pytest-cov==2.2.1
+pytest-repeat==0.2
 pytest>=2.6,<2.7
 pywatchman==1.3.0
 requests>=2.5.0,<2.6
