even less targets

--- a/tests/python/pants_test/engine/exp/BUILD
+++ b/tests/python/pants_test/engine/exp/BUILD
@@ -40,6 +40,7 @@ python_tests(
 python_tests(
   name='engine',
   sources=['test_engine.py'],
+  tags = {'flaky'},
   dependencies=[
     'src/python/pants/base:cmd_line_spec_parser',
     'src/python/pants/build_graph',
