adding all necessary dependencies jars

--- a/3rdparty/jvm/org/scala-sbt/BUILD
+++ b/3rdparty/jvm/org/scala-sbt/BUILD
@@ -23,7 +23,34 @@ jar_library(
     scala_jar(org='org.scala-sbt', name='zinc-classpath', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
               url='file:///Users/peiyu/.m2/repository/org/scala-sbt/zinc-classpath_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/zinc-classpath_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
               mutable=True),
+    scala_jar(org='org.scala-sbt', name='zinc-api-info', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
+              url='file:///Users/peiyu/.m2/repository/org/scala-sbt/zinc-apiinfo_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/zinc-apiinfo_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
+              mutable=True),
+    scala_jar(org='org.scala-sbt', name='compiler-bridge', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
+              url='file:///Users/peiyu/.m2/repository/org/scala-sbt/compiler-bridge_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/compiler-bridge_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
+              mutable=True),
+    scala_jar(org='org.scala-sbt', name='zinc-classfile', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
+              url='file:///Users/peiyu/.m2/repository/org/scala-sbt/zinc-classfile_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/zinc-classfile_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
+              mutable=True),
+    scala_jar(org='org.scala-sbt', name='zinc-compile', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
+              url='file:///Users/peiyu/.m2/repository/org/scala-sbt/zinc-compile_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/zinc-compile_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
+              mutable=True),
+    scala_jar(org='org.scala-sbt', name='zinc-ivy-integration', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
+              url='file:///Users/peiyu/.m2/repository/org/scala-sbt/zinc-ivy-integration_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/zinc-ivy-integration_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
+              mutable=True),
+    scala_jar(org='org.scala-sbt', name='zinc-scripted', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
+              url='file:///Users/peiyu/.m2/repository/org/scala-sbt/zinc-scripted_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/zinc-scripted_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
+              mutable=True),
     jar(org='org.scala-lang', name='scala-compiler', rev='2.10.5'),
+    scala_jar(org='org.scala-sbt', name='util-control', rev='0.1.0-M13', force=True),
+    scala_jar(org='org.scala-sbt', name='util-relation', rev='0.1.0-M13', force=True),
+    scala_jar(org='org.scala-sbt', name='util-testing', rev='0.1.0-M13', force=True),
+    scala_jar(org='org.scala-sbt', name='util-tracking', rev='0.1.0-M13', force=True),
+    jar(org='org.scala-sbt', name='util-interface', rev='0.1.0-M13', force=True),
+    scala_jar(org='org.scala-sbt', name='util-scripted', rev='0.1.0-M13', force=True),
+    scala_jar(org='org.scala-sbt', name='librarymanagement', rev='0.1.0-M11', force=True),
+    scala_jar(org='org.scala-sbt', name='sbinary', rev='0.4.3', force=True),
+    jar(org='org.scala-sbt', name='launcher-interface', rev='1.0.0-M1'),
   ],
 )
 
