--- a/3rdparty/jvm/org/scala-sbt/BUILD
+++ b/3rdparty/jvm/org/scala-sbt/BUILD
@@ -11,7 +11,7 @@ jar_library(
     scala_jar(org='org.scala-sbt', name='zinc-core', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
               url='file:///Users/peiyu/.m2/repository/org/scala-sbt/zinc-core_2.10/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/zinc-core_2.10-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
               mutable=True),
-    scala_jar(org='org.scala-sbt', name='compiler-interface', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
+    jar(org='org.scala-sbt', name='compiler-interface', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
               url='file:///Users/peiyu/.m2/repository/org/scala-sbt/compiler-interface/1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd/compiler-interface-1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd.jar',
               mutable=True),
     scala_jar(org='org.scala-sbt', name='zinc-compile-core', rev='1.0.0-X2-SNAPSHOT-ed16a0eab94d0e5e5a8b202762f8dd54c4020dcd',
