adding graph test

--- a/testprojects/tests/python/pants/file_sets/BUILD
+++ b/testprojects/tests/python/pants/file_sets/BUILD
@@ -73,3 +73,8 @@ python_library(
   name='implicit_sources',
   dependencies=[]
 )
+
+python_tests(
+  name='test_with_implicit_sources',
+  dependencies=[]
+)
