--- a/examples/src/scala/org/pantsbuild/example/hello/welcome/BUILD
+++ b/examples/src/scala/org/pantsbuild/example/hello/welcome/BUILD
@@ -5,7 +5,7 @@
 
 scala_library(
   dependencies=[
-    'examples/src/java/org/pantsbuild/example/hello/greet:greet',
+    'examples/src/java/org/pantsbuild/example/hello/greet:greet-scala',
     'examples/src/resources/org/pantsbuild/example/hello',
   ],
   provides = scala_artifact(org='org.pantsbuild.example.hello',
